[gd_scene load_steps=24 format=3 uid="uid://dr6qnsfg5v8bf"]

[ext_resource type="Script" uid="uid://cn0v4jk621ejf" path="res://assets/scripts/jigsaw_puzzle_1.gd" id="1_p57kp"]
[ext_resource type="Texture2D" uid="uid://bmy016lv74u8h" path="res://assets/images/puzzle_background.jpg" id="2_1s5nt"]
[ext_resource type="Texture2D" uid="uid://c5ktu8c824pkp" path="res://assets/puzzles/seattle.jpg" id="3_p7ub0"]
[ext_resource type="Script" uid="uid://dff2jx1ums0vv" path="res://assets/scripts/Camera2D.gd" id="4_823ux"]
[ext_resource type="FontFile" uid="uid://bh1dea3fkg787" path="res://assets/scripts/LinLibertine_I.otf" id="5_a27gv"]
[ext_resource type="Theme" uid="uid://0xk2aimn5x6r" path="res://assets/themes/main_menu_buttons.tres" id="6_nllai"]
[ext_resource type="Script" uid="uid://cbetb0m2r8wmu" path="res://assets/scenes/ui_button.gd" id="6_xhu8f"]
[ext_resource type="Texture2D" uid="uid://1gto0cal0d8t" path="res://assets/images/throbber1.png" id="7_yauer"]
[ext_resource type="Texture2D" uid="uid://cjx1litkce5rf" path="res://assets/images/zoom in.png" id="8_355s3"]
[ext_resource type="Script" uid="uid://b7kl13vp3afn1" path="res://assets/scripts/throbber.gd" id="8_l353k"]
[ext_resource type="Texture2D" uid="uid://4h10fwkwe8lp" path="res://assets/images/zoom out.png" id="8_sh5u1"]
[ext_resource type="Texture2D" uid="uid://coulp8ui4qvb" path="res://assets/images/wood_button_pressed.png" id="8_vb4a4"]
[ext_resource type="Theme" uid="uid://cfxebjeqy3ke7" path="res://assets/themes/bold_text.tres" id="9_l353k"]
[ext_resource type="Texture2D" uid="uid://b2lh81eqc65yt" path="res://assets/images/hide image.png" id="9_sh5u1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1781w"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cpyxs"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3lxxw"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c8kq2"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gc3tl"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t1oxr"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_355s3"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_usqnr"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vlbav"]
texture = ExtResource("8_vb4a4")
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
region_rect = Rect2(29, 115, 302, 130)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_p57kp")

[node name="TextureRect" type="TextureRect" parent="." groups=["dropable"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9264.0
offset_top = -5897.0
offset_right = 11176.0
offset_bottom = 8695.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1s5nt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(958, 542)
zoom = Vector2(0.35, 0.35)
script = ExtResource("4_823ux")

[node name="Label" type="Label" parent="."]
offset_left = -246.0
offset_top = -176.0
offset_right = 1975.0
offset_bottom = -38.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_a27gv")
theme_override_font_sizes/font_size = 120
horizontal_alignment = 1

[node name="referenceImage" type="TextureRect" parent="."]
offset_left = 2438.0
offset_top = -805.0
offset_right = 3444.0
offset_bottom = 70.0
expand_mode = 1
stretch_mode = 5

[node name="MainMenu" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(250, 50)
offset_left = 517.0
offset_top = -311.0
offset_right = 1378.0
offset_bottom = 11.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_nllai")
theme_override_font_sizes/font_size = 70
text = "Main Menu"

[node name="UI_Button" type="CanvasLayer" parent="."]
script = ExtResource("6_xhu8f")

[node name="Back" type="Button" parent="UI_Button"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -105.0
offset_right = 1069.0
offset_bottom = 150.0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_nllai")
theme_override_font_sizes/font_size = 95
text = "Return to Menu"

[node name="OnlineMode" type="Label" parent="UI_Button"]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="ZoomBox" type="HBoxContainer" parent="UI_Button"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_right = 116.0
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ZoomOutButton" type="Button" parent="UI_Button/ZoomBox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_1781w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cpyxs")
theme_override_styles/hover = SubResource("StyleBoxTexture_3lxxw")
icon = ExtResource("8_355s3")

[node name="ZoomInButton" type="Button" parent="UI_Button/ZoomBox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_c8kq2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gc3tl")
theme_override_styles/hover = SubResource("StyleBoxTexture_t1oxr")
icon = ExtResource("8_sh5u1")

[node name="HideImageButton" type="Button" parent="UI_Button/ZoomBox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_355s3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_usqnr")
theme_override_styles/hover = SubResource("StyleBoxTexture_vlbav")
icon = ExtResource("9_sh5u1")

[node name="LoadingScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="Control" parent="LoadingScreen"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="LoadingScreen/Background" groups=["dropable"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_1s5nt")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="LoadingScreen/Background/TextureRect"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_yauer")
expand_mode = 1
script = ExtResource("8_l353k")

[node name="Label" type="Label" parent="LoadingScreen/Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -143.0
offset_top = 603.0
offset_right = 147.0
offset_bottom = 707.0
grow_horizontal = 2
theme = ExtResource("9_l353k")
theme_override_colors/font_color = Color(0.505882, 0.34902, 0.231373, 1)
text = "Loading..."

[node name="Image" type="Sprite2D" parent="." groups=["dropable"]]
position = Vector2(-17993, 1014)
scale = Vector2(1.37158, 1.12207)
texture = ExtResource("3_p7ub0")

[node name="PieceSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="pressed" from="UI_Button/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="UI_Button/ZoomBox/ZoomOutButton" to="UI_Button" method="_on_ZoomOutButton_pressed"]
[connection signal="pressed" from="UI_Button/ZoomBox/ZoomInButton" to="UI_Button" method="_on_ZoomInButton_pressed"]
[connection signal="pressed" from="UI_Button/ZoomBox/HideImageButton" to="UI_Button" method="_on_HideImageButton_pressed"]
[connection signal="spawned" from="PieceSpawner" to="." method="_piece_spawned"]
